# loapy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  typing.yml
loapy/: __init__.py  client.py  errors.py  http.py  py.typed
loapy/types/: __init__.py  armories.py  auctions.py  basic.py  characters.py  gamecontents.py  guilds.py  markets.py  news.py
