[tool.poetry]
name = "loapy"
version = "0.0.2"
description = "An unofficial asynchronous SDK for Lostark Open API written in Python."
authors = ["Mary <mareowst@gmail.com>"]
license = "MIT License"
readme = "README.md"
include = ["loapy/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"
typing-extensions = "^4.4.0"
ujson = "^5.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
types-ujson = "^5.7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
